Add like and reply count

--- a/peerchat/src/main/res/layout/item_post.xml
+++ b/peerchat/src/main/res/layout/item_post.xml
@@ -100,6 +100,7 @@
             android:background="?selectableItemBackgroundBorderless"/>
 
         <TextView
+            android:id="@+id/txtLikeCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -119,6 +120,7 @@
             android:background="?selectableItemBackgroundBorderless"/>
 
         <TextView
+            android:id="@+id/txtCommentCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
