--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPrimaryPlayer"
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/fab_margin">
