--- a/musicdao/src/main/res/layout/fragment_playlist.xml
+++ b/musicdao/src/main/res/layout/fragment_playlist.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#303030"
-    android:orientation="vertical"
-    tools:context=".MusicService">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/mainLinearLayout"
