--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -8,12 +8,13 @@
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/fab_margin">
 
-<!--    <TextView-->
-<!--        android:id="@+id/torrentClientInfo"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="TextView"-->
-<!--        android:textColor="@color/white" />-->
+    <TextView
+        android:id="@+id/loadingReleases"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Loading content from peers..."
+        android:textColor="@color/white" />
 
     <!--    <LinearLayout-->
     <!--        android:layout_width="wrap_content"-->
