Show up/download speeds, upgrade TorrentStreamAndroid dependency and use it as an AAR file

--- a/musicdao/src/main/res/layout/fragment_release.xml
+++ b/musicdao/src/main/res/layout/fragment_release.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:stretchColumns="1"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/release_table_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingHorizontal="@dimen/fab_margin">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="@dimen/fab_margin"
+    android:stretchColumns="1">
 
-    <TableRow android:id="@+id/metadataRow" android:layout_width="match_parent" android:layout_height="wrap_content">
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/debugTextRelease"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_span="4"
+            android:textColor="@color/white" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/metadataRow"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/blockMetadata"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_span="4"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/white"
-            android:layout_span="4"/>
+            android:textColor="@color/white" />
     </TableRow>
 
 </TableLayout>
