--- a/musicdao/src/main/res/menu/menu_searchable.xml
+++ b/musicdao/src/main/res/menu/menu_searchable.xml
@@ -5,6 +5,10 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:context=".MusicService">
+    <item android:id="@+id/action_debug"
+        android:icon="@drawable/ic_baseline_bar_chart_24"
+        android:title="@string/debug_hint"
+        app:showAsAction="ifRoom" />
     <item android:id="@+id/action_search"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/search_hint"
