Loading content text in Release

--- a/musicdao/src/main/res/layout/fragment_release.xml
+++ b/musicdao/src/main/res/layout/fragment_release.xml
@@ -24,4 +24,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </TableLayout>
+
+    <TextView
+        android:id="@+id/loadingTracks"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:text="Loading content..."/>
 </LinearLayout>
