--- a/musicdao/src/main/res/menu/menu_searchable.xml
+++ b/musicdao/src/main/res/menu/menu_searchable.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/ic_baseline_bar_chart_24"
         android:title="@string/debug_hint"
         app:showAsAction="ifRoom" />
+    <item android:id="@+id/action_wallet"
+        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
+        android:title="@string/android_wallet"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/action_search"
         android:icon="@drawable/ic_baseline_search_24"
         android:title="@string/search_hint"
