--- a/musicdao/src/main/res/layout/fragment_playlist.xml
+++ b/musicdao/src/main/res/layout/fragment_playlist.xml
@@ -25,15 +25,15 @@
                     android:id="@+id/trackListLinearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                </LinearLayout>
+                    android:orientation="vertical"></LinearLayout>
             </ScrollView>
 
         </LinearLayout>
     </LinearLayout>
 
-    <fragment class="com.example.musicdao.AudioPlayer"
+    <fragment
         android:id="@+id/track_player_fragment"
+        class="com.example.musicdao.AudioPlayer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
