--- a/musicdao/src/main/res/layout/dialog_tip_artist.xml
+++ b/musicdao/src/main/res/layout/dialog_tip_artist.xml
@@ -21,11 +21,14 @@
             android:text="Amount to send: "/>
 
         <EditText
+            android:id="@+id/amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="5000"/>
+            android:inputType="numberDecimal"
+            android:text="5"/>
 
         <TextView
+            android:id="@+id/amountAssistingText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bits (micro BTC)"/>
