--- a/musicdao/src/main/res/layout/fragment_release.xml
+++ b/musicdao/src/main/res/layout/fragment_release.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -25,7 +26,7 @@
         android:layout_height="wrap_content"
         android:background="@color/musicColorAccent"
         android:visibility="gone"
-        android:text="Tip this artist"/>
+        android:text="Tip this artist/band"/>
 
     <TableLayout
         android:id="@+id/release_table_layout"
@@ -38,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:visibility="gone"
         android:textColor="@color/white"
-        android:text="Loading content..."/>
+        android:text="Searching metadata from peers..."/>
 </LinearLayout>
