Add a BTC/USDT conversion rate from Binance for the user, and fix several issues with TipArtistDialog

--- a/musicdao/src/main/res/layout/dialog_tip_artist.xml
+++ b/musicdao/src/main/res/layout/dialog_tip_artist.xml
@@ -6,9 +6,10 @@
     android:padding="@dimen/fab_margin">
 
     <TextView
+        android:id="@+id/instructionText"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sending a tip to artist, with public key: sklmdwiOIDSMVOIiomsd34F"/>
+        android:layout_height="wrap_content" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,6 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="Amount to send: "/>
 
         <EditText
@@ -25,13 +27,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
-            android:text="5"/>
+            android:text="1" />
 
         <TextView
             android:id="@+id/amountAssistingText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bits (micro BTC)"/>
+            android:textStyle="bold"
+            android:text="USD"/>
     </LinearLayout>
 
 
