Fix crashes and navigation issues with searching, improve loading time of MusicService by moving work off main thread

--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Loading content from peers..."
+        android:text="No music playlists found from peers"
         android:textColor="@color/white" />
 
     <RelativeLayout
