--- a/peerchat/src/main/res/layout/fragment_contacts.xml
+++ b/peerchat/src/main/res/layout/fragment_contacts.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/connectivityStatus" />
+        app:layout_constraintTop_toBottomOf="@id/connectivityStatus"
+        />
 
     <LinearLayout
         android:id="@+id/imgEmpty"
