Add contacts to eurotoken

--- a/eurotoken/src/main/res/layout/fragment_contact_list.xml
+++ b/eurotoken/src/main/res/layout/fragment_contact_list.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
-        tools:context=".ContactFragment"
+        tools:context=".ContactsFragment"
         tools:listitem="@layout/fragment_contact"
         />
 
