--- a/eurotoken/src/main/res/menu/eurotoken_navigation_menu.xml
+++ b/eurotoken/src/main/res/menu/eurotoken_navigation_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/contactFragment"
+        android:id="@+id/contactsFragment"
         android:title="Contacts"
         android:icon="@drawable/ic_baseline_people_24" />
     <item
