--- a/peerchat/src/main/res/layout/item_message.xml
+++ b/peerchat/src/main/res/layout/item_message.xml
@@ -30,18 +30,46 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/txtMessage"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="50dp"
                 android:background="@drawable/bg_message"
+                >
+
+            <TextView
+                android:id="@+id/txtTransaction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minWidth="50dp"
                 android:textColor="@color/text_primary"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="32dp"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                tools:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum" />
+                android:visibility="gone"
+                android:text="€20,00" />
+
+            <TextView
+                android:id="@+id/txtMessage"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:minWidth="50dp"
+                android:textColor="@color/text_primary"
+                app:layout_constraintTop_toBottomOf="@id/txtTransaction"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                tools:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum"
+                />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ProgressBar
                 android:id="@+id/progress"
@@ -65,7 +93,8 @@
         android:paddingTop="2dp"
         android:paddingBottom="4dp"
         app:layout_constraintTop_toBottomOf="@id/content"
-        app:layout_constraintStart_toStartOf="@id/content">
+        app:layout_constraintStart_toStartOf="@id/content"
+        >
 
         <ImageView
             android:id="@+id/imgDelivered"
