--- a/eurotoken/src/main/res/menu/eurotoken_navigation_menu.xml
+++ b/eurotoken/src/main/res/menu/eurotoken_navigation_menu.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/contactsFragment"
-        android:title="Contacts"
-        android:icon="@drawable/ic_baseline_people_24" />
-    <item
         android:id="@+id/transactionFragment"
-        android:title="New transaction"
-        android:icon="@drawable/ic_baseline_send_money_24_old" />
+        android:title="Transaction History"
+        android:icon="@drawable/ic_baseline_trans_hist_alt_24" />
+    <item
+        android:id="@+id/exchangeFragment"
+        android:title="Exchange"
+        android:icon="@drawable/ic_baseline_account_balance_24" />
 </menu>
