Finish live eurotoken transactions and balance

--- a/eurotoken/src/main/res/layout/item_transaction.xml
+++ b/eurotoken/src/main/res/layout/item_transaction.xml
@@ -1,14 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:background="?selectableItemBackground">
+
+    <ImageView
+        android:id="@+id/imageInOut"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_baseline_outgoing_24"
+        app:tint="@color/red"
+        />
 
     <TextView
         android:id="@+id/txtAmount"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        app:layout_constraintStart_toEndOf="@id/imageInOut"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="25dp"
+        android:text="20.00"
+        />
 
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/txtName"
+        android:layout_marginStart="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/txtAmount"
+        app:layout_constraintBottom_toTopOf="@id/txtPeerId"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:textColor="@color/text_primary"
+        android:textStyle="bold"
+        android:ellipsize="end"
+        android:lines="1"
+        tools:text="Matt"
+        android:layout_marginLeft="16dp"
+        android:paddingRight="8dp" />
+
+    <TextView
+        android:id="@+id/txtDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        android:textColor="#AAAAAA"
+        app:layout_constraintTop_toTopOf="@id/txtName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/txtName"
+        tools:text="10:00" />
+
+    <TextView
+        android:id="@+id/txtPeerId"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/text_primary"
+        android:typeface="monospace"
+        android:ellipsize="end"
+        android:lines="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtName"
+        app:layout_constraintStart_toStartOf="@id/txtName"
+        app:layout_constraintBottom_toTopOf="@id/txtMessage"
+        tools:text="4nmZNbpULdgYtjC2CW4NMveU8N6d4WW6" />
+
+    <TextView
+        android:id="@+id/txtMessage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textColor="@color/text_secondary"
+        android:ellipsize="end"
+        android:lines="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txtPeerId"
+        app:layout_constraintStart_toStartOf="@id/txtName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:text="Hello World!" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
