--- a/peerchat/src/main/res/drawable/ic_baseline_send_money_24.xml
+++ b/peerchat/src/main/res/drawable/ic_baseline_send_money_24.xml
@@ -17,5 +17,5 @@
         <path
             android:fillColor="@android:color/white"
             android:pathData="M4,12l1.41,1.41L11,7.83V20h2V7.83l5.58,5.59L20,12l-8,-8 -8,8z"/>
-    </group>>
+    </group>
 </vector>
