--- a/eurotoken/src/main/res/layout/fragment_exchange.xml
+++ b/eurotoken/src/main/res/layout/fragment_exchange.xml
@@ -5,10 +5,23 @@
     android:layout_height="match_parent"
     tools:context=".ui.exchange.ExchangeFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <Button
         android:id="@+id/btn_connect_gateway"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Connect to gateway" />
+    android:text="Creation event" />
+
+    <Button
+        android:id="@+id/btnDestroy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Destroy event" />
+
+    </LinearLayout>
 
 </FrameLayout>
